--- a/homework-2.html
+++ b/homework-2.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=devic e-width, initial-scale=1.0" />
     <title>Homwork</title>
     <style>
+      body {
+        background-image: https://getwallpapers.com/wallpaper/full/6/a/9/1173035-cold-weather-wallpaper-1920x1200-1080p.jpg;
+      }
       h1,
       h2,
       h3 {
